# doffy

./: .cproject  .project  CMakeLists.txt  README.md  sdkconfig
drivers/i2c/: i2c_wrapper.h
main/: CMakeLists.txt  main.c
main/drivers/i2c/: CMakeLists.txt  i2c_wrapper.c  i2c_wrapper.h
main/sensors/lis3mdl/: CMakeLists.txt
platform/: hw_pin_defs.h
